Add Angular routing
Add initial-page unimplemented components

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,12 +1,2 @@
-<button mat-button> HEY </button>
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>
-      Picorini
-    </mat-card-title>
-    <mat-card-subtitle>
-      Queso de trufa
-    </mat-card-subtitle>  
-  </mat-card-header>
-  <p>What do you say?</p>
-</mat-card>
+<p>The web runs</p>
+<router-outlet></router-outlet>
