--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,2 +1,6 @@
-<p>The web runs</p>
+<div class="background">
+    <!-- <app-header></app-header> -->
+    <app-central-container></app-central-container>
+</div>
+
 <router-outlet></router-outlet>
