--- a/web/src/app/initial-page/central-container/central-container.component.html
+++ b/web/src/app/initial-page/central-container/central-container.component.html
@@ -1,1 +1,10 @@
-<p>central-container works!</p>
+<div class="central-box">
+    <mat-tab-group>
+        <mat-tab label="Login">
+            
+        </mat-tab>
+        <mat-tab label="Register">
+
+        </mat-tab>
+    </mat-tab-group>
+</div>
