--- a/web/src/app/initial-page/login-box/login-box.component.html
+++ b/web/src/app/initial-page/login-box/login-box.component.html
@@ -1,29 +1,26 @@
 <mat-card class="card-login-box">
-  <mat-card-header>
-    <mat-card-title>Login to Grasp</mat-card-title>
-    </mat-card-header>
     <mat-card-content>
-      <form class="form-login-box">
-        <table class="full-width" cellspacing="0">
-          <tr>
-            <td>
-              <mat-form-field class="full-width">
-                <input matInput placeholder="Username" [(ngModel)]="username" name="username" required>
-              </mat-form-field>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <mat-form-field class="full-width">
-                <input matInput placeholder="Password" [(ngModel)]="password" name="password" required>
-              </mat-form-field>
-            </td>
-          </tr>
-        </table>
-      </form>
-      <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
+        <form class="form-login-box" [formGroup]="loginInfo">
+            <table class="full-width" cellspacing="0">
+                <tr>
+                <td>
+                    <mat-form-field class="full-width" [hideRequiredMarker]="true">
+                    <input matInput placeholder="Username" formControlName="username" required>
+                    </mat-form-field>
+                </td>
+                </tr>
+                <tr>
+                <td>
+                    <mat-form-field class="full-width" [hideRequiredMarker]="true">
+                    <input matInput placeholder="Password" formControlName="password" type="password" required>
+                    </mat-form-field>
+                </td>
+                </tr>
+            </table>
+        </form>
+        <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
     </mat-card-content>
-    <mat-card-actions>
-      <button mat-raised-button (click)="login()" color = "primary">Login</button>
+    <mat-card-actions class="buttons">
+        <button mat-raised-button (click)="login()" color="primary">Login</button>
     </mat-card-actions>
   </mat-card>
