--- a/web/src/app/scroll-page/scroll/scroll.component.html
+++ b/web/src/app/scroll-page/scroll/scroll.component.html
@@ -1,8 +1,13 @@
 <table style="width:90%">
     <tr>
+        <button mat-icon-button position="center" color="background" aria-label="Expand less icon-button">
+            <mat-icon>expand_less</mat-icon>
+        </button>
+    </tr>
+    <tr>
         <mat-card class="aux-card top">
             <mat-card-header>
-                <mat-card-title >Super Previous Class</mat-card-title>
+                <mat-card-title>Previous Class</mat-card-title>
             </mat-card-header>
             <mat-card-actions>
                 <button mat-icon-button position="left" color="accent" aria-label="Star icon-button">
@@ -18,7 +23,7 @@
     <tr>
         <mat-card class="middle-card">
             <mat-card-header>
-                <mat-card-title>Previous Class</mat-card-title>
+                <mat-card-title>Current Class</mat-card-title>
             </mat-card-header>
             <mat-card-actions position="top-right">
 
@@ -37,8 +42,13 @@
     <tr>
         <mat-card class="aux-card">
             <mat-card-header>
-                <mat-card-title>Current Class</mat-card-title>
+                <mat-card-title>Next Class</mat-card-title>
             </mat-card-header>
         </mat-card>
+    </tr>
+    <tr>
+      <button mat-icon-button position="center" color="background" aria-label="Expand more icon-button">
+          <mat-icon>expand_more</mat-icon>
+      </button>
     </tr>
 </table>
