Upload colors, delete cross

--- a/web/src/app/scroll-page/scroll/scroll.component.html
+++ b/web/src/app/scroll-page/scroll/scroll.component.html
@@ -1,6 +1,6 @@
 <table style="width:90%">
     <tr>
-        <button mat-icon-button position="center" color="background" aria-label="Expand less icon-button">
+        <button mat-icon-button position="center" aria-label="Expand less icon-button">
             <mat-icon>expand_less</mat-icon>
         </button>
     </tr>
@@ -10,10 +10,10 @@
                 <mat-card-title>Previous Class</mat-card-title>
             </mat-card-header>
             <mat-card-actions>
-                <button mat-icon-button position="left" color="accent" aria-label="Star icon-button">
+                <button mat-icon-button position="left" color="primary" aria-label="Star icon-button">
                     <mat-icon>star</mat-icon> Change your rating
                 </button>
-                <button mat-icon-button position="right" color="accent" aria-label="Person icon-button">
+                <button mat-icon-button position="right" color="primary" aria-label="Person icon-button">
                     <mat-icon>emoji_people</mat-icon> Volunteer to help your classmates
                 </button>
             </mat-card-actions>
@@ -25,17 +25,20 @@
             <mat-card-header>
                 <mat-card-title>Current Class</mat-card-title>
             </mat-card-header>
+            <!--
             <mat-card-actions position="top-right">
 
-                <button mat-icon-button color="accent" aria-label="Cross icon-button">
+                <button mat-icon-button color="primary" aria-label="Cross icon-button">
                     <mat-icon>cancel</mat-icon>
                 </button>
             </mat-card-actions>
+            -->
             <mat-slider
               class="card-slider"
               max="10"
               min="0"
               thumbLabel
+              color="primary"
             ></mat-slider>
         </mat-card>
     </tr>
@@ -47,7 +50,7 @@
         </mat-card>
     </tr>
     <tr>
-      <button mat-icon-button position="center" color="background" aria-label="Expand more icon-button">
+      <button mat-icon-button position="center" aria-label="Expand more icon-button">
           <mat-icon>expand_more</mat-icon>
       </button>
     </tr>
