Ups, this is the good src

--- a/web/src/app/scroll-page/scroll/scroll.component.html
+++ b/web/src/app/scroll-page/scroll/scroll.component.html
@@ -1,5 +1,3 @@
-
-
 <table style="width:100%">
     <tr>
         <button mat-icon-button position="center" aria-label="Expand less icon-button">
@@ -31,7 +29,7 @@
     <tr>
         <mat-card class="middle-card">
             <mat-card-header>
-                <mat-card-title>Current Class</mat-card-title>
+                <mat-card-title class="middle-title">Current Class</mat-card-title>
             </mat-card-header>
             <!--
             <mat-card-actions position="top-right">
