--- a/web/src/app/scroll-page/header/header.component.html
+++ b/web/src/app/scroll-page/header/header.component.html
@@ -1,9 +1,9 @@
-<mat-toolbar color="primary">
-  <span>Grasp</span>
+<mat-toolbar color="primary" style="height:90px;">
+  <img src="assets/img/grasp-logo.png" height="100px">
+  <span class="spacer-small"></span>
+  <span class="main-title">Grasp</span>
   <span class="spacer"></span>
-  <button mat-icon-button aria-label="User icon-button">
-      <mat-icon class="icon" aria-hidden="false" aria-label="User icon">person</mat-icon>
-  </button>
+  <app-dialog-data-example></app-dialog-data-example>
   <span class="spacer-small"></span>
   <button mat-icon-button aria-label="Exit icon-button">
       <mat-icon class="icon" aria-hidden="false" aria-label="Exit icon">exit_to_app</mat-icon>
