At last! Routing and Register done!
should change get to post and encrypt

--- a/web2/src/app/init-screen/central-container/login-box/login-box.component.html
+++ b/web2/src/app/init-screen/central-container/login-box/login-box.component.html
@@ -18,6 +18,7 @@
                 </tr>
             </table>
         </form>
+        <mat-error *ngIf="errMsg">Invalid credentials.</mat-error>
         <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
     </mat-card-content>
     <mat-card-actions class="buttons">
