add background image
Doesnt work, maria solves it

--- a/web2/src/app/init-screen/init-screen.component.scss
+++ b/web2/src/app/init-screen/init-screen.component.scss
@@ -1,3 +1,8 @@
+.panel {
+    background-color: black;
+   // -image: url("../../assets/img/grasp-init-background.png")
+}
+
 .central-box {
     position: absolute;
     left: 80%;
