--- a/web2/src/app/user-screen/scroll-embedder/scroll/scroll.component.html
+++ b/web2/src/app/user-screen/scroll-embedder/scroll/scroll.component.html
@@ -10,18 +10,20 @@
                 <mat-card-title>Previous Class</mat-card-title>
             </mat-card-header>
             <mat-card-actions>
-                <span class="left-span">
-                    <button mat-icon-button  color="primary" aria-label="Star icon-button">
-                          <mat-icon class="icon-small">star</mat-icon>
+                <div class="container">
+                    <span class="left-span">
+                        <button mat-icon-button  color="primary" aria-label="Star icon-button">
+                            <mat-icon class="icon-small">star</mat-icon>
                     </button>
                     <span class="vertical">Change your rating</span>
-                </span>
-                <span class="right-span">
-                    <button mat-icon-button  color="primary" aria-label="Person icon-button">
-                        <mat-icon class="icon-small">emoji_people</mat-icon>
-                    </button>
-                    <span class="vertical">Volunteer to help your classmates</span>
-                </span>
+                    </span>
+                    <span class="right-span">
+                        <button mat-icon-button  color="primary" aria-label="Person icon-button">
+                            <mat-icon class="icon-small">emoji_people</mat-icon>
+                        </button>
+                        <span class="vertical">Volunteer to help your classmates</span>
+                    </span>
+                </div>
             </mat-card-actions>
         </mat-card>
     </tr>
@@ -39,10 +41,10 @@
                 </button>
             </mat-card-actions>
             -->
-            <mat-slider
-              class="card-slider"
+            <mat-slider 
+            class="card-slider"
               max="10"
-              min="0"
+              min="1"
               thumbLabel
               color="primary"
             ></mat-slider>
