--- a/web2/src/app/init-screen/init-screen.component.html
+++ b/web2/src/app/init-screen/init-screen.component.html
@@ -1,10 +1,5 @@
+<img src="../../assets/img/grasp-init-background.png" height=100%>
+
 <div class="central-box">
-        <mat-tab-group>
-            <mat-tab label="Login">
-                <app-login-box></app-login-box>
-            </mat-tab>
-            <mat-tab label="Register">
-            <app-register-box></app-register-box>
-        </mat-tab>
-    </mat-tab-group>
+    <app-central-container></app-central-container>
 </div>
