--- a/web2/src/app/init-screen/central-container/central-container.component.html
+++ b/web2/src/app/init-screen/central-container/central-container.component.html
@@ -1,1 +1,8 @@
-<p>central-container works!</p>
+<mat-tab-group>
+        <mat-tab label="Login">
+            <app-login-box (propUsername)="propagate($event)"></app-login-box>
+        </mat-tab>
+        <mat-tab label="Register">
+        <app-register-box></app-register-box>
+    </mat-tab>
+</mat-tab-group>
