--- a/web2/src/app/user-screen/header/dialog-data-example/dialog-data-example-component-dialog.html
+++ b/web2/src/app/user-screen/header/dialog-data-example/dialog-data-example-component-dialog.html
@@ -1,8 +1,10 @@
-<h2 mat-dialog-title>Hi, !</h2>
+<h2 mat-dialog-title>Hi, {{data.username}}!</h2>
 
-<h3 mat-dialog-subtitle> Your email:</h3>
-<h3 mat-dialog-subtitle> Your subjects:</h3>
-<h3 mat-dialog-subtitle> Your timetable:</h3>
+<h3 mat-dialog-subtitle> Your email: {{this.email}} </h3>
+<!--
+  <h3 mat-dialog-subtitle> Your subjects: {{this.subjects }}</h3>
+  <h3 mat-dialog-subtitle> Your timetable: {{this.}}</h3>
+-->
 
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Return</button>
