--- a/web2/src/app/user-screen/header/header.component.html
+++ b/web2/src/app/user-screen/header/header.component.html
@@ -3,10 +3,12 @@
   <span class="spacer-small"></span>
   <span class="main-title">Grasp</span>
   <span class="spacer"></span>
+  <button mat-icon-button aria-label="Feedback icon-button" (click)="feedbackClicked()">
+    <mat-icon class="icon" aria-hidden="false" aria-label="Feedback icon">question_answer</mat-icon>
+  </button>
+  <span class="spacer-small"></span>
   <app-dialog-data-example [username]="username"></app-dialog-data-example>
   <p>{{ this.username }}</p>
   <span class="spacer-small"></span>
-  <button mat-icon-button aria-label="Exit icon-button" (click)="exitClicked()">
-    <mat-icon class="icon" aria-hidden="false" aria-label="Exit icon">exit_to_app</mat-icon>
-  </button>
+  <app-dialog-out></app-dialog-out>
 </mat-toolbar>
