--- a/web2/src/app/user-screen/scroll-embedder/scroll/scroll.component.html
+++ b/web2/src/app/user-screen/scroll-embedder/scroll/scroll.component.html
@@ -15,9 +15,9 @@
                     <mat-card-actions *ngIf="votes[i]!=0">
                         <div class="container">
                             <span class="left-span">
-                                <button mat-icon-button  color="primary" aria-label="Star icon-button">
+                                <button (click)="revote(i)" mat-icon-button  color="primary" aria-label="Star icon-button">
                                     <mat-icon class="icon-small">star</mat-icon>
-                            </button>
+                                </button>
                             <span class="vertical">Change your rating</span>
                             </span>
                             <span class="right-span">
@@ -30,13 +30,14 @@
                     </mat-card-actions>
                     <mat-card-actions *ngIf="votes[i]==0">        
                         <mat-slider 
+                            (input)="pitch(i, $event)"
                             class="card-slider"
                             max="10"
                             min="1"
                             thumbLabel
                             color="primary"
                         ></mat-slider>
-                        <button class="vote-button" mat-raised-button color="primary"> Vote </button>
+                        <button (click)="vote(i)" class="vote-button" mat-raised-button color="primary"> Vote </button>
                     </mat-card-actions>
                 </mat-card>
             </ng-container>
