--- a/web2/src/app/user-screen/header/dialog-data-example/dialog-data-example-component-dialog.html
+++ b/web2/src/app/user-screen/header/dialog-data-example/dialog-data-example-component-dialog.html
@@ -1,11 +1,15 @@
 <h2 mat-dialog-title>Hi, {{data.username}}!</h2>
 
 <h3 mat-dialog-subtitle> Your email: {{this.email}} </h3>
-<!--
-  <h3 mat-dialog-subtitle> Your subjects: {{this.subjects }}</h3>
-  <h3 mat-dialog-subtitle> Your timetable: {{this.}}</h3>
--->
 
+<h3 mat-dialog-subtitle> Your subjects: </h3>
+<ul>
+<li *ngFor="let s of this.subject; let i = index" [attr.data-index]="i">
+  {{s}}: 
+  <span *ngIf="this.feedback[i] == 0">Unranked</span>
+  <span *ngIf="this.feedback[i] != 0">{{this.feedback[i]}}</span>
+</li>
+</ul>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Return</button>
 </mat-dialog-actions>
