--- a/web2/src/app/user-screen/user-screen.component.html
+++ b/web2/src/app/user-screen/user-screen.component.html
@@ -1,2 +1,2 @@
-<app-header [username]="username"></app-header>
-<app-scroll [username]="username" class="scroll"></app-scroll>
+<app-header></app-header>
+<app-scroll class="scroll"></app-scroll>
