add user friendly message

--- a/web2/src/app/user-screen/user-screen.component.scss
+++ b/web2/src/app/user-screen/user-screen.component.scss
@@ -2,8 +2,19 @@
     width: 80%;
     position: absolute;
     left: 50%;
-    top: 50%;
+    top: 60%;
     -webkit-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
+}
+
+div p {
+    size: 20px;
+    margin: 4%;
+    color: primary;
+    text-align: center;
+}
+div {
+    width: 100%;
+    position: absolute;
 }
   
