--- a/web2/src/app/feedback/feedback.component.scss
+++ b/web2/src/app/feedback/feedback.component.scss
@@ -2,6 +2,7 @@
   position: absolute;
   top: 20%;
   left: 10%;
+  margin-top: 30px;
   width: 30%;
 }
 
@@ -9,6 +10,7 @@
   position: absolute;
   top: 20%;
   left: 55%;
+  margin-top: 30px;
   width: 30%;
 }
 
@@ -16,4 +18,15 @@
   text-align: center;
   padding: 20px;
   background-color: rgba(255,64,129,0.5);
+}
+
+.spacer {
+  display: flex;
+  justify-content: space-between;
+}
+
+h1 {
+  color: primary;
+  text-align:center;
+  margin-top:20px;
 }
