--- a/web2/src/app/user-screen/user-screen.component.html
+++ b/web2/src/app/user-screen/user-screen.component.html
@@ -1,5 +1,4 @@
-<app-header [username]="username"></app-header>
-<div>
-    <p>Mark how well did you understand your lectures today.</p>
-</div>
+<app-header></app-header>
+<h1> Evaluate your lessons from today. </h1>
+
 <app-scroll [username]="username" class="scroll"></app-scroll>
